[gd_scene load_steps=8 format=3 uid="uid://dclitc703i6l3"]

[ext_resource type="PackedScene" uid="uid://ch2rssv03o2ak" path="res://character/character.tscn" id="1_kl3tb"]
[ext_resource type="Script" path="res://character/player/player.gd" id="2_o60qm"]
[ext_resource type="Script" path="res://character/player/state/player_state_machine.gd" id="3_qn0rk"]
[ext_resource type="Script" path="res://character/player/state/idle_state.gd" id="4_ydxwn"]
[ext_resource type="Script" path="res://character/player/state/run_state.gd" id="5_0nf70"]
[ext_resource type="Script" path="res://character/player/state/melee_attack_state.gd" id="6_4gw2q"]
[ext_resource type="Script" path="res://character/player/state/aim_state.gd" id="7_ek7gw"]

[node name="Player" groups=["player"] instance=ExtResource("1_kl3tb")]
collision_layer = 5
script = ExtResource("2_o60qm")

[node name="StateMachine" parent="." index="4"]
script = ExtResource("3_qn0rk")

[node name="Idle" type="Node" parent="StateMachine" index="0"]
script = ExtResource("4_ydxwn")

[node name="Run" type="Node" parent="StateMachine" index="1"]
script = ExtResource("5_0nf70")

[node name="MeleeAttack" type="Node" parent="StateMachine" index="2"]
script = ExtResource("6_4gw2q")

[node name="Aim" type="Node" parent="StateMachine" index="3"]
script = ExtResource("7_ek7gw")

[node name="AttackTimer" type="Timer" parent="StateMachine" index="4"]
wait_time = 0.3
one_shot = true

[node name="WeaponSwitchTimer" type="Timer" parent="StateMachine" index="5"]
wait_time = 0.1
one_shot = true

[node name="Camera2D" type="Camera2D" parent="." index="5"]
zoom = Vector2(1.5, 1.5)
